--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.0"
+    "react-icons": "^5.0.0",
+    "usehooks-ts": "^2.9.2"
   },
   "devDependencies": {
     "@types/node": "^20",
