--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "axios": "^1.6.5",
     "lodash": "^4.17.21",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.0",
     "react-loading-skeleton": "^3.3.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.2",
     "usehooks-ts": "^2.9.2"
   },
   "devDependencies": {
