--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.5",
+    "classnames": "^2.5.1",
     "lodash": "^4.17.21",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
@@ -20,13 +22,18 @@
     "react-loading-skeleton": "^3.3.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.2",
-    "usehooks-ts": "^2.9.2"
+    "usehooks-ts": "^2.9.2",
+    "validator": "^13.11.0",
+    "zod": "^3.22.4",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/validator": "^13.11.8",
+    "@types/zxcvbn": "^4.4.4",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "autoprefixer": "^10.0.1",
     "eslint": "^8.56.0",
