--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,9 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint", "react"],
-  "rules": {},
+  "rules": {
+    "react/prop-types": [2, { "ignore": ["className"] }]
+  },
   "settings": {
     "react": {
       "version": "detect"
