--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.0.14",
     "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.5",
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
+    "mongodb": "^6.3.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
@@ -22,6 +24,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.2",
+    "server-only": "^0.0.1",
     "usehooks-ts": "^2.9.2",
     "validator": "^13.11.0",
     "zod": "^3.22.4",
