--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^2.0.14",
     "@hookform/resolvers": "^3.3.4",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "axios": "^1.6.5",
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
