--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "axios": "^1.6.5",
+    "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
     "mongodb": "^5.4.0",
+    "mongoose": "^8.1.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
@@ -31,6 +33,7 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
