--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^5.4.0",
     "mongoose": "^8.1.0",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.8",
     "react": "^18",
