--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
+    "crypto-js": "^4.2.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
