--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
+    "cloudinary": "^2.0.0",
     "crypto-js": "^4.2.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
@@ -23,6 +24,7 @@
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.8",
+    "os": "^0.1.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
@@ -32,6 +34,7 @@
     "react-toastify": "^10.0.2",
     "server-only": "^0.0.1",
     "usehooks-ts": "^2.9.2",
+    "uuid": "^9.0.1",
     "validator": "^13.11.0",
     "zod": "^3.22.4",
     "zxcvbn": "^4.4.2"
@@ -44,6 +47,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "@types/validator": "^13.11.8",
     "@types/zxcvbn": "^4.4.4",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
