--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "lodash": "^4.17.21",
     "mongodb": "^5.4.0",
     "mongoose": "^8.1.0",
+    "multer": "^1.4.5-lts.1",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
+    "next-connect": "^0.13.0",
     "nodemailer": "^6.9.8",
     "os": "^0.1.2",
     "react": "^18",
@@ -43,6 +45,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
