--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "classnames": "^2.5.1",
     "cloudinary": "^2.0.0",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.1",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^5.4.0",
     "mongoose": "^8.1.0",
+    "multer": "^1.4.5-lts.1",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.8",
@@ -33,6 +35,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.2",
     "server-only": "^0.0.1",
+    "streamifier": "^0.1.1",
     "usehooks-ts": "^2.9.2",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
@@ -43,10 +46,12 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/streamifier": "^0.1.2",
     "@types/uuid": "^9.0.8",
     "@types/validator": "^13.11.8",
     "@types/zxcvbn": "^4.4.4",
