--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.1",
     "handlebars": "^4.7.8",
+    "html-react-parser": "^5.1.6",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^5.4.0",
@@ -36,6 +37,7 @@
     "react-toastify": "^10.0.2",
     "server-only": "^0.0.1",
     "streamifier": "^0.1.1",
+    "styled-components": "^6.1.8",
     "usehooks-ts": "^2.9.2",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
