--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@nextui-org/react": "^2.4.6",
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
@@ -30,6 +31,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.9.8",
     "os": "^0.1.2",
     "react": "^18",
