--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^16.4.1",
     "handlebars": "^4.7.8",
     "html-react-parser": "^5.1.6",
+    "i18next": "^23.14.0",
+    "i18next-resources-to-backend": "^1.2.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^5.4.0",
@@ -37,6 +39,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
+    "react-i18next": "^15.0.1",
     "react-icons": "^5.0.0",
     "react-loading-skeleton": "^3.3.1",
     "react-spinners": "^0.13.8",
