--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "handlebars": "^4.7.8",
     "html-react-parser": "^5.1.6",
     "i18next": "^23.14.0",
+    "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -37,6 +38,7 @@
     "nodemailer": "^6.9.8",
     "os": "^0.1.2",
     "react": "^18",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-i18next": "^15.0.1",
