--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.15",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@nextui-org/react": "^2.4.6",
+    "accept-language": "^3.0.20",
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
