--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.2",
     "server-only": "^0.0.1",
+    "sharp": "^0.33.5",
     "streamifier": "^0.1.1",
     "styled-components": "^6.1.8",
     "usehooks-ts": "^2.9.2",
